Fixed all error lint errors and added docs build test

--- a/docs/blog/2021-08-01-mdx-blog-post.mdx
+++ b/docs/blog/2021-08-01-mdx-blog-post.mdx
@@ -5,16 +5,22 @@ authors: [slorber]
 tags: [docusaurus]
 ---
 
-Blog posts support [Docusaurus Markdown features](https://docusaurus.io/docs/markdown-features), such as [MDX](https://mdxjs.com/).
+{/* eslint-disable jsx-a11y/control-has-associated-label, no-undef */}
+
+Blog posts support
+[Docusaurus Markdown features](https://docusaurus.io/docs/markdown-features),
+such as [MDX](https://mdxjs.com/).
 
 :::tip
 
 Use the power of React to create interactive blog posts.
 
 ```js
-<button onClick={() => alert('button clicked!')}>Click me!</button>
+<button type="button" onClick={() => alert('button clicked!')}>
+  Click me!
+</button>
 ```
 
-<button onClick={() => alert('button clicked!')}>Click me!</button>
+<button type="button" onClick={() => alert('button clicked!')} />
 
 :::
