--- a/docs/docs/api/tpsrc/template.mdx
+++ b/docs/docs/api/tpsrc/template.mdx
@@ -29,19 +29,7 @@ Object containing answers to prompts.
 }
 ```
 
-<Example>
-
-```json title=".tpsrc"
-{
-  "react-component": {
-    "answers": {
-      "css": true
-    }
-  }
-}
-```
-
-</Example>
+<Example />
 
 ## Options
 
@@ -62,16 +50,4 @@ Object containing options for templates. See
 }
 ```
 
-<Example>
-
-```json title=".tpsrc"
-{
-  "react-component": {
-    "opts": {
-      "wipe": true
-    }
-  }
-}
-```
-
-</Example>
+<Example />
