--- a/docs/docs/main/create-new-template/settings.mdx
+++ b/docs/docs/main/create-new-template/settings.mdx
@@ -26,30 +26,9 @@ features very soon.
 ```
 
 <Tabs>
-<TabItem value="json">
+<TabItem value="json" />
 
-```json title="settings.json"
-{}
-```
-
-</TabItem>
-
-<TabItem value="js">
-
-```js title="settings.js"
-module.exports = {};
-```
-
-:::warning
-
-Please note that `export default` has not been thoroughly tested and may not
-perform as anticipated. If you encounter any issues or have suggestions for
-improvement, we encourage you to file an issue or submit a pull request (PR). We
-greatly value contributions and welcome any input you may have.
-
-:::
-
-</TabItem>
+<TabItem value="js" />
 </Tabs>
 
 :::tip
