revert files back

--- a/docs/docs/api/template.mdx
+++ b/docs/docs/api/template.mdx
@@ -20,7 +20,15 @@ new Templates('<template-name>', {
 });
 ```
 
-<Example />
+<Example>
+
+```ts
+new Templates('react-component', {
+  wipe: true,
+});
+```
+
+</Example>
 
 ## Options
 
@@ -45,11 +53,36 @@ Optional path to add prepend to each
 [build path](/docs/main/create-new-template/templates#what-is-rendering-a-template).
 
 <Tabs>
-<TabItem value="tpsrc" label=".tpsrc" />
+<TabItem value="tpsrc" label=".tpsrc">
 
-<TabItem value="node" label="Node" />
+```json title=".tpsrc"
+{
+  "react-component": {
+    "opts": {
+      // highlight-next-line
+      "extendDest": "./path/to/some/directory"
+    }
+  }
+}
+```
 
-<TabItem value="cli" label="CLI" />
+</TabItem>
+
+<TabItem value="node" label="Node">
+
+```ts
+new Templates('react-component', {
+  extendDest: './path/to/some/directory',
+});
+```
+
+</TabItem>
+
+<TabItem value="cli" label="CLI">
+
+Not suppported at the moment
+
+</TabItem>
 </Tabs>
 
 <Example>
@@ -91,9 +124,31 @@ instead, add a `extendDest` option to your `.tpsrc` file and add `src` as the
 value.
 
 <Tabs>
-<TabItem value="tpsrc" label=".tpsrc" />
+<TabItem value="tpsrc" label=".tpsrc">
 
-<TabItem value="node" label="Node" />
+```json title=".tpsrc"
+{
+  "react-component": {
+    "opts": {
+      // highlight-next-line
+      "extendDest": "./src"
+    }
+  }
+}
+```
+
+</TabItem>
+
+<TabItem value="node" label="Node">
+
+```ts
+new Templates('react-component', {
+  // highlight-next-line
+  extendDest: './src',
+});
+```
+
+</TabItem>
 </Tabs>
 
 Tps will now prepend the `src` path to your build paths so well get the same
@@ -134,14 +189,79 @@ rendering your new template instance. This ensures a fresh start and avoids any
 potential conflicts during the rendering process.
 
 <Tabs>
-<TabItem value="tpsrc" label=".tpsrc" />
+<TabItem value="tpsrc" label=".tpsrc">
 
-<TabItem value="node" label="Node" />
+```json title=".tpsrc"
+{
+  "react-component": {
+    "opts": {
+      // highlight-next-line
+      "wipe": true
+    }
+  }
+}
+```
 
-<TabItem value="cli" label="CLI" />
+</TabItem>
+
+<TabItem value="node" label="Node">
+
+```ts
+new Templates('react-component', {
+  // highlight-next-line
+  wipe: true,
+});
+```
+
+</TabItem>
+
+<TabItem value="cli" label="CLI">
+
+```bash
+tps some-template app --wipe
+```
+
+</TabItem>
 </Tabs>
 
-<Example />
+<Example>
+
+Lets say you have the following directory structure
+
+```text
+| - app
+	| - .tps/
+		| - ...
+	| - src/
+		// highlight-start
+		| - Home/
+			| - ...
+		// highlight-end
+```
+
+If I was trying to rendering a new instance of `react-component` template and
+called this `Home`, tps would error out because a `Home` directory already
+exists. However if you add the `--wipe` flag, tps will delete this directory
+first, then render your new instance in its place.
+
+```bash
+tps react-component src/Home --wipe
+```
+
+Will produce:
+
+```text
+| - app
+	| - .tps/
+		| - ...
+	| - src/
+		// highlight-start
+		| - Home/
+			| - <react-component template files ...>
+		// highlight-end
+```
+
+</Example>
 
 ### Force
 
@@ -162,14 +282,79 @@ By default, templates will raise an error if there are any file or directory
 conflicts.
 
 <Tabs>
-<TabItem value="tpsrc" label=".tpsrc" />
+<TabItem value="tpsrc" label=".tpsrc">
 
-<TabItem value="node" label="Node" />
+```json title=".tpsrc"
+{
+  "react-component": {
+    "opts": {
+      // highlight-next-line
+      "force": true
+    }
+  }
+}
+```
 
-<TabItem value="cli" label="CLI" />
+</TabItem>
+
+<TabItem value="node" label="Node">
+
+```ts
+new Templates('react-component', {
+  // highlight-next-line
+  force: true,
+});
+```
+
+</TabItem>
+
+<TabItem value="cli" label="CLI">
+
+```bash
+tps some-template app --force
+```
+
+</TabItem>
 </Tabs>
 
-<Example />
+<Example>
+
+Lets say you have the following directory structure
+
+```text
+| - app
+	| - .tps/
+		| - ...
+	| - src/
+		// highlight-start
+		| - Home/
+			| - ...
+		// highlight-end
+```
+
+If I was trying to rendering a new instance of `react-component` template and
+called this `Home`, tps would error out because a `Home` directory already
+exists. However if you add the `--wipe` flag, tps will delete this directory
+first, then render your new instance in its place.
+
+```bash
+tps react-component src/Home --wipe
+```
+
+Will produce:
+
+```text
+| - app
+	| - .tps/
+		| - ...
+	| - src/
+		// highlight-start
+		| - Home/
+			| - <react-component template files ...>
+		// highlight-end
+```
+
+</Example>
 
 ### New Folder
 
@@ -197,13 +382,78 @@ in progress.
 :::
 
 <Tabs>
-<TabItem value="tpsrc" label=".tpsrc" />
+<TabItem value="tpsrc" label=".tpsrc">
 
-<TabItem value="node" label="Node" />
+```json title=".tpsrc"
+{
+  "react-component": {
+    "opts": {
+      // highlight-next-line
+      "newFolder": false
+    }
+  }
+}
+```
 
-<TabItem value="cli" label="CLI" />
+</TabItem>
+
+<TabItem value="node" label="Node">
+
+```ts
+new Templates('react-component', {
+  // highlight-next-line
+  newFolder: false,
+});
+```
+
+</TabItem>
+
+<TabItem value="cli" label="CLI">
+
+```bash
+tps react-component Nav --no-newFolder
+```
+
+</TabItem>
 </Tabs>
 
-<Example title="New folder" />
+<Example title="New folder">
 
-<Example title="No New folder" />
+If I was trying to rendering a new instance of `express-app` template and called
+this `app`, tps would create a new directory for me named `app` and place all
+contents inside of it
+
+```bash
+tps express-app app
+```
+
+```text
+| - coding <---cwd
+	// highlight-start
+	| - app
+		| - <express-app contents ...>
+	// highlight-end
+```
+
+</Example>
+
+<Example title="No New folder">
+
+If I was trying to rendering a new instance of `express-app` template and called
+this `app` however I didnt want a new folder then it would produce the
+following:
+
+```bash
+tps express-app app --no-newFolder
+```
+
+```text
+| - coding <---cwd
+	// highlight-start
+	| - <express-app contents ...>
+	// highlight-end
+```
+
+Notice how this no longer creates a `app` directory.
+
+</Example>
