--- a/docs/docs/api/cli.mdx
+++ b/docs/docs/api/cli.mdx
@@ -94,7 +94,18 @@ templates, which are templates available in your current working directory
 (cwd). `global` stands for global templates, accessible from anywhere on your
 system.
 
-<Example />
+<Example>
+
+```bash
+> tps list
+Global:
+- react-component
+Local:
+- new-test
+- new-api
+```
+
+</Example>
 
 ## Create
 
@@ -159,7 +170,24 @@ Options:
   --help         Show help                                             [boolean]
 ```
 
-<Example />
+<Example>
+
+```bash
+tps new template react-component
+```
+
+Produces:
+
+```text
+| - .tps
+	// highlight-start
+	| - react-component/
+		| - default/
+		| - settings.json
+	// highlight-end
+```
+
+</Example>
 
 ### new package
 
@@ -174,4 +202,21 @@ Options:
   --help         Show help                                             [boolean]
 ```
 
-<Example />
+<Example>
+
+```bash
+tps new package react-component css
+```
+
+Produces:
+
+```text
+| - .tps
+	| - react-component/
+		// highlight-next-line
+		| - css/
+		| - default/
+		| - <other files or directories...>
+```
+
+</Example>
