--- a/docs/docs/api/template-context.mdx
+++ b/docs/docs/api/template-context.mdx
@@ -28,7 +28,17 @@ If you render a template with no build path. Then `tps.name` will be null.
 tps react-component Nav
 ```
 
-<Dot tps={{ name: "Nav" }} />
+<Dot tps={{ name: "Nav" }}>
+
+```text
+const {{= tps.name}} = (props) => {
+	return (
+		<div></div>
+	)
+}
+```
+
+</Dot>
 
 </Example>
 
@@ -40,7 +50,15 @@ tps react-component Nav
 
 Name of the template your rendering with.
 
-<Example />
+<Example>
+
+```bash title="cli"
+tps express-app app
+    |__________|
+    # ^ This is the name of the template
+```
+
+</Example>
 
 ## Packages
 
@@ -77,7 +95,21 @@ when additional packages are used:
 tps react-component App --packages css
 ```
 
-<Dot tps={{name: "Nav", packages: ['default', "css"]}} lang="js" />
+<Dot tps={{name: "Nav", packages: ['default', "css"]}} lang="js">
+
+```text
+import React from react;
+{{? tps.packages.includes("css")}}import "{{= tps.name}}.css";
+{{?}}
+const {{= tps.name}} = (props) => {
+	return (
+		<div></div>
+	)
+}
+
+```
+
+</Dot>
 
 </TabItem>
 
@@ -87,7 +119,21 @@ tps react-component App --packages css
 tps react-component App
 ```
 
-<Dot tps={{name: "Nav", packages: ['default']}} lang="js" />
+<Dot tps={{name: "Nav", packages: ['default']}} lang="js">
+
+```text
+import React from react;
+{{? tps.packages.includes("css")}}import "{{= tps.name}}.css";
+{{?}}
+const {{= tps.name}} = (props) => {
+	return (
+		<div></div>
+	)
+}
+
+```
+
+</Dot>
 
 </TabItem>
 </Tabs>
@@ -104,4 +150,24 @@ The `tps.answers` object holds the answers to the prompts in your templates.
 Each prompt's value is stored with a property name that corresponds to the name
 you assigned to the prompt in your `settings.json` file.
 
-<Example />
+<Example>
+
+```json title="settings.json"
+{
+  "prompts": [
+    {
+      // highlight-next-line
+      "name": "age"
+      // ...
+    }
+  ]
+}
+```
+
+you can access the users answer with:
+
+```text
+{{= tps.answers.age }}
+```
+
+</Example>
