revert files back

--- a/docs/docs/api/tpsrc/template.mdx
+++ b/docs/docs/api/tpsrc/template.mdx
@@ -29,7 +29,19 @@ Object containing answers to prompts.
 }
 ```
 
-<Example />
+<Example>
+
+```json title=".tpsrc"
+{
+  "react-component": {
+    "answers": {
+      "css": true
+    }
+  }
+}
+```
+
+</Example>
 
 ## Options
 
@@ -50,4 +62,16 @@ Object containing options for templates. See
 }
 ```
 
-<Example />
+<Example>
+
+```json title=".tpsrc"
+{
+  "react-component": {
+    "opts": {
+      "wipe": true
+    }
+  }
+}
+```
+
+</Example>
