--- a/docs/docs/main/create-new-template/prompts.mdx
+++ b/docs/docs/main/create-new-template/prompts.mdx
@@ -82,7 +82,27 @@ answer.
 {{= tps.answers["<name-of-prompt>"]}}
 ```
 
-<Example />
+<Example>
+
+```json title="settings.json"
+{
+  "prompts": [
+    {
+      // highlight-next-line
+      "name": "age"
+      // ...
+    }
+  ]
+}
+```
+
+you can access the users answer with:
+
+```text
+{{= tps.answers.age }}
+```
+
+</Example>
 
 ---
 
@@ -103,7 +123,30 @@ the user when they are rendering a new instance.
 }
 ```
 
-<Example />
+<Example>
+
+```json title="settings.json"
+{
+  "prompts": [
+    {
+      "name": "unit",
+      // highlight-next-line
+      "message": "Would you like to include unit tests?"
+    }
+  ]
+}
+```
+
+When the user renders a new instance they will see the message added in your
+prompt
+
+```bash
+❯ tps react-component Nav
+# highlight-next-line
+? Would you like to include unit tests?
+```
+
+</Example>
 
 ---
 
@@ -125,7 +168,29 @@ prompting you would like to use. You can see more about this property in the
 }
 ```
 
-<Example />
+<Example>
+
+```json title="settings.json"
+{
+  "prompts": [
+    {
+      "name": "over18",
+      // highlight-next-line
+      "type": "confirm",
+      "message": "Are you over the age of 18?"
+    }
+  ]
+}
+```
+
+Produces
+
+```bash
+❯ tps react-component Nav
+? Are you over the age of 18?
+```
+
+</Example>
 
 ---
 
@@ -214,9 +279,31 @@ can answer.
 Depending on what the user answers depends on what will happen:
 
 <Tabs>
-<TabItem value="yes" label="User answers yes" />
+<TabItem value="yes" label="User answers yes">
 
-<TabItem value="no"  label="User answers no" />
+If user answers `yes`, then the `unit` package will be included in the rendering
+process so a `server.test.js` will be added
+
+```text
+| - newApp/
+	| - server.js
+	// highlight-next-line
+	| - server.test.js
+```
+
+</TabItem>
+
+<TabItem value="no"  label="User answers no">
+
+If user answers `no`, then the `unit` package will not be include in the
+rendering process so no `server.test.js`.
+
+```text
+| - newApp/
+	| - server.js
+```
+
+</TabItem>
 </Tabs>
 </Example>
 
@@ -283,9 +370,33 @@ With the choice the user selects, tps will then include a package that matches
 the answer
 
 <Tabs>
-<TabItem value="react" label="User answers react" />
+<TabItem value="react" label="User answers react">
 
-<TabItem value="angular"  label="User answers angular" />
+If user answers `react`, then the `react` package will be included in the
+rendering process so a `react.js` will be added
+
+```text
+| - newApp/
+	| - server.js
+	// highlight-next-line
+	| - react.js
+```
+
+</TabItem>
+
+<TabItem value="angular"  label="User answers angular">
+
+If user answers `angular`, then the `angular` package will be included in the
+rendering process so a `angular.js` will be added
+
+```text
+| - newApp/
+	| - server.js
+	// highlight-next-line
+	| - angular.js
+```
+
+</TabItem>
 </Tabs>
 
 </Example>
@@ -302,7 +413,64 @@ Prompts of type `checkbox` will return their answer as list of strings.
 
 :::
 
-<Example />
+<Example>
+
+Say were rendering a new `express-app` instance and we have a prompt like so
+
+```json title="settings.json"
+{
+  "prompts": [
+    {
+      "name": "extras",
+      "message": "Would you like to include any other features?",
+      "tpsType": "package",
+      // highlight-start
+      "type": "checkbox", // <--- makes prompt accept list of strings
+      "choices": ["metrics", "unit", "e2e", "api"]
+      // highlight-end
+    }
+  ]
+}
+```
+
+since this is declared as a package type, the choices to the question must match
+a package in our template.
+
+```text
+| - .tps/
+	| - express-app/
+		| settings.json
+		| - default/
+			| - server.js
+		// highlight-start
+		| - metrics/
+			| - metrics.js
+		| - unit/
+			| - server.test.js
+		| - e2e/
+			| - website.test.js
+		| - api/
+			| - api.js
+		// highlight-end
+```
+
+When the user renders a new template. tps will ask for an list of inputs.
+Whatever the user answers, tps will take all of the values and try to find a
+packages that matches the answers.
+
+If the user answers `metrics` and `unit` then both packages will be included in
+the rendering process
+
+```text
+| - newApp/
+	// highlight-next-line
+	| - metrics.js
+	// highlight-next-line
+	| - server.test.js
+	| - server.js
+```
+
+</Example>
 
 #### data
 
@@ -348,7 +516,21 @@ When the user is rendering a new instance, the prompt will be displayed and the
 user can answer. Whatever the user answers will now be available for use in your
 dynamic files.
 
-<Dot lang="js" tps={{ answers: {security: true}}} />
+<Dot lang="js" tps={{ answers: {security: true}}}>
+
+```text
+const express = require("express");
+
+const app = express();
+
+/* node code ... */
+
+{{? tps.answers.security }}app.use(helmet());{{?}}
+
+/* node code ... */
+```
+
+</Dot>
 </Example>
 
 ---
@@ -373,7 +555,32 @@ prompt's name specified in your settings file.
 tps some-template app --some-flag <some-value>
 ```
 
-<Example />
+<Example>
+
+If we were rendering a new instance using the `express-app` template and had
+this settings file
+
+```json title="settings.json"
+{
+  "prompts": [
+    {
+      // highlight-next-line
+      "name": "unit",
+      "message": "Would you like to include unit tests?",
+      "tpsType": "package",
+      "type": "confirm"
+    }
+  ]
+}
+```
+
+The user can answer this prompts questions by adding a `unit` command line flag
+
+```bash
+tps express-app app --unit
+```
+
+</Example>
 
 Now lets go over how to answer different types of prompts
 
@@ -394,7 +601,32 @@ flag name:
 --no-unit
 ```
 
-<Example />
+<Example>
+
+If we were rendering a new instance using the `express-app` template and had
+this settings file
+
+```json title="settings.json"
+{
+  "prompts": [
+    {
+      // highlight-next-line
+      "name": "unit",
+      "message": "Would you like to include unit tests?",
+      "tpsType": "package",
+      "type": "confirm"
+    }
+  ]
+}
+```
+
+The user can answer this prompts questions by adding a `unit` command line flag
+
+```bash
+tps express-app app --unit
+```
+
+</Example>
 
 ###### string
 
@@ -413,7 +645,34 @@ the value right after your flag
 --message "hey there everyone"
 ```
 
-<Example />
+<Example>
+
+If we were rendering a new instance using the `express-app` template and had
+this settings file
+
+```json title="settings.json"
+{
+  "prompts": [
+    {
+      // highlight-next-line
+      "name": "framework",
+      "message": "What frontend package would you like to include",
+      "tpsType": "package",
+      "type": "list",
+      "choices": ["react", "angular", "vue"]
+    }
+  ]
+}
+```
+
+The user can answer this prompts questions by adding a `framework` command line
+flag and adding the value after the flag named
+
+```bash
+tps express-app app --framework react
+```
+
+</Example>
 
 ###### list
 
@@ -427,7 +686,33 @@ If the value type is an list then you end up with something like this.
 --numbers ten nine five
 ```
 
-<Example />
+<Example>
+
+If we were rendering a new instance using the `express-app` template and had
+this settings file
+
+```json title="settings.json"
+{
+  "prompts": [
+    {
+      "name": "extras",
+      "message": "Would you like to include any other features?",
+      "tpsType": "package",
+      "type": "checkbox", // <--- makes prompt accept list of strings
+      "choices": ["metrics", "unit", "e2e", "api"]
+    }
+  ]
+}
+```
+
+The user can answer this prompts questions by adding a `extras` flag and putting
+the values after the flag name
+
+```bash
+tps express-app app --extras metrics unit e2e
+```
+
+</Example>
 
 :::note
 
@@ -439,9 +724,31 @@ When using lists on the command line it is recommended to add the flag after all
 required fields:
 
 <Tabs>
-<TabItem value="bad" label="Bad" />
+<TabItem value="bad" label="Bad">
 
-<TabItem value="good" label="Good" />
+when using lists on the command line before all required params, you have to add
+a extra `--` after the list flag so yargs can parse the require params correctly
+
+```bash
+tps express-app --extras metrics api unit -- app
+```
+
+</TabItem>
+
+<TabItem value="good" label="Good">
+
+Move the list param to the end of the command in order to prevent this extra
+adition
+
+```bash
+tps express-app app --extras metrics api unit
+
+# Addition flags
+
+tps express-app app --extras metrics api unit --some-other-flag
+```
+
+</TabItem>
 </Tabs>
 
 :::
@@ -512,9 +819,25 @@ this settings file
 Now we can answer the prompt question via the alias
 
 <Tabs>
-<TabItem value="command-line" label="Command line" />
+<TabItem value="command-line" label="Command line">
 
-<TabItem value="node" label="Node" />
+```bash
+tps express-app app -f react
+```
+
+</TabItem>
+
+<TabItem value="node" label="Node">
+
+```js
+const Templates = require('tps');
+
+const tps = new Templates('express-app');
+
+tps.setAnswers({ f: 'react' });
+```
+
+</TabItem>
 </Tabs>
 
 </Example>
