add copy command to react component

--- a/docs/docs/main/templates/react-component.mdx
+++ b/docs/docs/main/templates/react-component.mdx
@@ -12,6 +12,12 @@ tps react-component <name>
 
 <TemplateOptions template="react-component" type="js" />
 
+## Copy
+
+```bash
+tps copy react-component
+```
+
 ## Examples
 
 ### Generate component
