Fixed create new template prerequizite

--- a/docs/docs/main/create-new-template/index.mdx
+++ b/docs/docs/main/create-new-template/index.mdx
@@ -5,14 +5,6 @@ pagination_prev: main/intro
 
 # Creating new templates
 
-:::caution Prerequsites
-
-Creating a new template requires your repository to be initialized with
-Templates. You can read how to do this
-[here](tpsrc#initializing-repo-with-templates).
-
-:::
-
 Are you ready to take your development game to the next level? With our powerful
 template creation feature, you can now build custom templates tailored to your
 project's needs, making your development process smoother and more productive.
@@ -24,3 +16,17 @@ you'll have the flexibility to design templates that suit various use cases.
 Let's dive in and unleash the potential of your project templates! Follow our
 detailed documentation on how to create a new template and unlock a world of
 possibilities for your development workflow. Happy templating!
+
+:::caution Prerequsites
+
+Please initialize your repo with templates before continuing. This will create
+the necessary components needed in order to create a template
+
+```bash
+tps init
+```
+
+Its not required but you can read more about this
+[here](tpsrc#initializing-repo-with-templates)
+
+:::
